[tool.poetry]
name = "dbt-argo"
version = "0.1.0-rc"
description = "A dbt pipeline converter to Argo Workflows"
authors = ["Léo Grosjean <leo.bigjin@gmail.com>"]
readme = "README.md"
packages = [{ include = "dbt_argo", from = "src" }]

[tool.poetry.scripts]
dbt-argo = "dbt_argo.v2.cli:cli"


[tool.poetry.dependencies]
python = ">=3.9,<3.12.0"
click = "^8.1.6"
couler = { git = "https://github.com/couler-proj/couler" }
hera = "^5.6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pylint = "^2.17.5"

[tool.poetry.group.gcp.dependencies]
dbt-bigquery = "^1.5"

[tool.pylint]
fail-under = 0.8

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
