[tool.poetry]
name = "dbt-argo"
version = "0.2.0a4"
description = "A dbt pipeline converter to Argo Workflows"
authors = ["Léo Grosjean <leo.bigjin@gmail.com>"]
readme = "README.md"
packages = [{ include = "dbt_argo", from = "src" }]

[tool.poetry.scripts]
dbt-argo = "dbt_argo.v2.cli:cli"


[tool.poetry.dependencies]
python = ">=3.9,<3.12.0"
click = "^8.1.6"
hera = "^5.6.0"
croniter = "^1.4.1"
kubernetes = "^27.2.0"
pyaml = "^23.9.1"
dbt-bigquery = "^1.5"
cloudpathlib = { extras = ["gs"], version = "^0.15.1" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pylint = "^2.17.5"


[tool.pylint]
fail-under = 0.8

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
